formatted matches page, fixed footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,14 +50,21 @@ h3 {
 	font-size: 30px;
 	margin-left: 50px;
 	margin-right: 50px;
+	width: 80%;
+	border: solid;
+	border-color: darkgray;
+	border-width: 2px;
+	display: flex;
+	flex-direction: column;
 }
 
-.convo {
-	font-size: 15px;
+.match-container {
+	display: flex;
+	flex-direction: row;
 }
 
-.checkin-status {
-	font-size: 20px;
+.match-image-container {
+	height: 200px;
 }
 
 .matches-thumbnails {
@@ -65,6 +72,17 @@ h3 {
 	padding: 10px;
 }
 
+#match-info-container {
+	margin: 20px;
+}
+
+.checkin-status {
+	font-size: 20px;
+}
+
+.convo {
+	font-size: 15px;
+}
 .wrapper {
 	float: left;
 }
@@ -115,7 +133,7 @@ img.btn-img {
 
 footer {
 	bottom: 0px !important;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	float: inline-block;
 }
